--- a/preamble.tex
+++ b/preamble.tex
@@ -20,6 +20,7 @@
 \usepackage{algorithmicx}
 \usepackage{algpseudocode}
 \usepackage{booktabs}
+\usepackage{multirow}
 
 \geometry{tmargin=4cm,bmargin=3cm,lmargin=3cm,rmargin=2cm,headheight=0.8cm,headsep=1cm,footskip=0.5cm,marginparwidth=1.6cm}
 \setdefaultlanguage{czech}
