Added softmax layer

--- a/evaluation.tex
+++ b/evaluation.tex
@@ -1,6 +1,6 @@
 \chapter{Metody vyhodnocení}
 
-Úloha popsaná v kapitole \ref{problem} je úlohou \BPname{binární klasifikace}. To znamená, že jejím cílem je zařadit vstupní objekty do jedné ze dvou tříd, označovaných jako pozitivní a negativní. Předpokládá se existence nějaké klasifikační funkce \( f : \BPspace X \to \left\{ -1, +1 \right\} \), která pro každý vstupní objekt určí příslušnou třídu, symbolizovanou hodnotou \( -1 \) nebo \( +1 \). Model popsaný v kapitole \ref{model} se snaží tuto neznámou klasifikační funkci aproximovat. Za účelem zhodnocení kvality této aproximace je v této kapitole nejprve zavedeno několik pojmů vztahujících se k binární klasifikaci a následně popsáno několik metod vizualizace kvality binárních klasifikátorů. \todo{Zkontrolovat po napsání}
+Úloha popsaná v kapitole \ref{problem} je úlohou \BPname{binární klasifikace}. To znamená, že jejím cílem je zařadit vstupní objekty do jedné ze dvou tříd, označovaných jako pozitivní a negativní. Předpokládá se existence nějaké klasifikační funkce \( f : \BPspace X \to \left\{ -1, +1 \right\} \), která pro každý vstupní objekt určí příslušnou třídu, symbolizovanou hodnotou \( -1 \) nebo \( +1 \). Model popsaný v kapitole \ref{model} se snaží tuto neznámou klasifikační funkci aproximovat. Za účelem zhodnocení kvality této aproximace je v této kapitole nejprve zavedeno několik pojmů vztahujících se k binární klasifikaci a následně popsáno několik metod vizualizace kvality binárních klasifikátorů.
 
 \begin{define}
 	Nechť \( r \in \left\{ -1, +1 \right\} \) je správným výsledkem pro nějaký vstupní objekt v úloze binární klasifikace. Nechť \( p \in \left\{ -1, +1 \right\} \) je aproximací \( r \). Odhad \( p \) nazýváme
