--- a/preamble.tex
+++ b/preamble.tex
@@ -65,11 +65,11 @@
 \algnewcommand\algorithmicbreak{\State\textbf{break}}
 \algnewcommand\Break{\algorithmicbreak{}}
 
-\newcommand{\result}[2]{%
+\newcommand{\result}[3]{%
 	\begin{figure}[h]%
 		\centering%
 		\includegraphics[width=0.96\textwidth]{images/results/#1}%
-		\caption{#2}%
+		\caption{#3}\label{#2}%
 	\end{figure}%
 }
 
