--- a/results.tex
+++ b/results.tex
@@ -1,54 +1,45 @@
 \chapter{Výsledky}
 
-Použité modely.
-O tom, že všechny křivky jsou pro percentily.
-Hromada obrázků...
+\section{Srovnání s nejlepším předchozím modelem}
+Obrázek \ref{prior_art} srovnává PR křivky nejlepšího modelu (srovnání parametrů v následujících podkapitolách) s nejlepším předchozím modelem pro soubor dat popsaný v kapitole \ref{dataset} (srov. \cite{machlica_learning_2017}). \todo{Předpokládám uvedení prior art v úvodu, tohle je všech 500 feature}
 
-\section{Srovnání s prior art}
+\result{{prior_art_PR}.pdf}{prior_art}{Srovnání PR křivek s nejlepším předchozím modelem}
 
-\section{Srovnání různých modelů}
+\section{Srovnání různých topologií}
 
-\result{{by_settings/basic_PR}.pdf}{PR křivky modelů trénovaných pomocí trigramů s vahou 0.5}
-\result{{by_settings/unigrams_PR}.pdf}{PR křivky modelů trénovaných pomocí unigramů s vahou 0.5}
-\result{{by_settings/weight0.1_PR}.pdf}{PR křivky modelů trénovaných pomocí trigramů s vahou 0.1}
-\result{{by_settings/weight0.01_PR}.pdf}{PR křivky modelů trénovaných pomocí trigramů s vahou 0.01}
+Bylo vyzkoušeno 5 různých topologií neuronových sítí, odpovídajících modelu popsanému v kapitole \ref{model}. Všechny tyto topologie používají tři identické neuronové sítě definující funkce \( k_D \), \( k_P \) a \( k_Q \) (popsané v kapitole \ref{model}) Topologie označované jako \BPname{relumean}, \BPname{relurelumean}, \BPname{maxout3mean} a \BPname{maxout3maxout3mean} shodně modelují klasifikační funkci \( f \) jednou vrstvou neuronů s lineární přenosovou funkcí a jednou vrstvou s přenosovou funkcí softmax. Topologie relumean používá pro vkládající funkce \( \phi_D \), \( \phi_P \) a \( \phi_Q \) jednu vrstvu typu ReLU, následovanou funkcí aritmetického průměru. Topologie relurelumean používá dvě vrstvy typu ReLU následované funkcí aritmetického průměru. Topologie maxout3mean používá jednu vrstvu typu maxout3 (tj, maxout s parametrem \( k = 3 \)) následovanou funkcí aritmetického průměru. Topologie maxout3maxout3mean využívá 2 vrstvy typu maxout3 následované funkcí aritmetického průměru. Topologie \BPname{relurelumeanrelu} má funkce \( \phi_D \), \( \phi_Q \) a \( \phi_P  \) shodné s topologií relurelumean, avšak funkci \( f \) definuje jako jednu vrstvu typu ReLU následovanou jednou vrstvou s lineární přenosovou funkcí následovanou jednou vrstvou typu softmax. PR křivky všech těchto topologií jsou zobrazeny na obrázku \ref{topologies}. Všechny křivky v této kapitole byly počítány s kvantilizací pomocí percentilů (ve smyslu kapitoly \ref{continuous_aprox}).
 
-\result{{by_settings/basic_ROC_log}.pdf}{ROC křivky modelů trénovaných pomocí trigramů s vahou 0.5}
-\result{{by_settings/unigrams_ROC_log}.pdf}{ROC křivky modelů trénovaných pomocí unigramů s vahou 0.5}
-\result{{by_settings/weight0.1_ROC_log}.pdf}{ROC křivky modelů trénovaných pomocí trigramů s vahou 0.1}
-\result{{by_settings/weight0.01_ROC_log}.pdf}{ROC křivky modelů trénovaných pomocí trigramů s vahou 0.01}
+\result{{topology_PR}.pdf}{topologies}{Srovnání PR křivek různých topologií}
 
-\result{{by_settings/basic_F1}.pdf}{Křivky F-skóre modelů trénovaných pomocí trigramů s vahou 0.5}
-\result{{by_settings/unigrams_F1}.pdf}{Křivky F-skóre modelů trénovaných pomocí unigramů s vahou 0.5}
-\result{{by_settings/weight0.1_F1}.pdf}{Křivky F-skóre modelů trénovaných pomocí trigramů s vahou 0.1}
-\result{{by_settings/weight0.01_F1}.pdf}{Křivky F-skóre modelů trénovaných pomocí trigramů s vahou 0.01}
+\section{Srovnání různých velikosti příznaků}
 
-\result{{by_settings/basic_DET}.pdf}{DET křivky modelů trénovaných pomocí trigramů s vahou 0.5}
-\result{{by_settings/unigrams_DET}.pdf}{DET křivky modelů trénovaných pomocí unigramů s vahou 0.5}
-\result{{by_settings/weight0.1_DET}.pdf}{DET křivky modelů trénovaných pomocí trigramů s vahou 0.1}
-\result{{by_settings/weight0.01_DET}.pdf}{DET křivky modelů trénovaných pomocí trigramů s vahou 0.01}
+\begin{algorithm}
+	\caption{Generátor vektorů příznaků}
+	\label{feature_generator}
+	\begin{algorithmic}
+		\Require $ input $ \Comment Řetězec, ze kterého bude vektor příznaků generován
+		\Require $ length $ \Comment Délka vektoru příznaků
+		\Require $ n $ \Comment Velikost příznaků
+		\Statex
+		\State $ feature\_vector \gets \Call{zero\_vector}{length} $
+		\For{$ i \in \Call{ngrams}{input, n} $} \Comment Funkce vracející všechna podslova délky $ n $
+			\State $ hash \gets \Call{hash}{i} $ \Comment Standardní hash funkce jazyka Julia
+			\State $ index \gets hash \mod length $
+			\State $ feature\_vector \left[ index \right] \gets feature\_vector \left[ index \right] + 1 $
+		\EndFor
+	\end{algorithmic}
+\end{algorithm}
 
+Jako funkce \( \psi \) (ve smyslu kapitoly \ref{model}) byla použita funkce popsaná algoritmem \ref{feature_generator}. Tato funkce generuje vektor příznaků pomocí \( n \)\BPname{-gramů}, tedy podslov délky \( n \). Byly vyzkoušeny unigramy (\( n = 1 \)), bigramy \todo{Když se stihnou evaluovat} (\( n = 2 \)) a trigramy (\( n = 3 \)), všechny s topologií relumean. PR křivky pro tyto tři rozdílné velikosti příznaků jsou na obrázku \ref{ngrams}.\todo{Obrázek}
 
-\result{{by_model/relumean_PR}.pdf}{PR křivka modelu relumean pro různá nastavení}
-\result{{by_model/relurelumean_PR}.pdf}{PR křivka modelu relurelumean pro různá nastavení}
-\result{{by_model/relurelumeanrelu_PR}.pdf}{PR křivka modelu relurelumeanrelu pro různá nastavení}
-\result{{by_model/maxout3mean_PR}.pdf}{PR křivka modelu maxout3mean pro různá nastavení}
-\result{{by_model/maxout3maxout3mean_PR}.pdf}{PR křivka modelu maxout3maxout3mean pro různá nastavení}
+\result{{by_settings/basic_PR}.pdf}{ngrams}{Srovnání PR křivek pro různé velikosti příznaků}
 
-\result{{by_model/relumean_ROC_log}.pdf}{ROC křivka modelu relumean pro různá nastavení}
-\result{{by_model/relurelumean_ROC_log}.pdf}{ROC křivka modelu relurelumean pro různá nastavení}
-\result{{by_model/relurelumeanrelu_ROC_log}.pdf}{ROC křivka modelu relurelumeanrelu pro různá nastavení}
-\result{{by_model/maxout3mean_ROC_log}.pdf}{ROC křivka modelu maxout3mean pro různá nastavení}
-\result{{by_model/maxout3maxout3mean_ROC_log}.pdf}{ROC křivka modelu maxout3maxout3mean pro různá nastavení}
+\section{Srovnání různého počtu příznaků}
+V algoritmu \ref{feature_generator} lze měnit i velikost generovaného vektoru příznaků. Byly vyzkoušeny velikosti \( 509 \), \( 1021 \), \( 2053 \), \( 4099 \) a \( 8191 \) \todo{Když se stihnou evaluovat}. Všechny tyto velikosti byly zkoušeny s topologií relumean a trigramy. Srovnání PR křivek je na obrázku \ref{feature_count}.\todo{Obrázek}
 
-\result{{by_model/relumean_F1}.pdf}{Křivka F-skóre modelu relumean pro různá nastavení}
-\result{{by_model/relurelumean_F1}.pdf}{Křivka F-skóre modelu relurelumean pro různá nastavení}
-\result{{by_model/relurelumeanrelu_F1}.pdf}{Křivka F-skóre modelu relurelumeanrelu pro různá nastavení}
-\result{{by_model/maxout3mean_F1}.pdf}{Křivka F-skóre modelu maxout3mean pro různá nastavení}
-\result{{by_model/maxout3maxout3mean_F1}.pdf}{Křivka F-skóre modelu maxout3maxout3mean pro různá nastavení}
+\result{{by_settings/basic_PR}.pdf}{feature_count}{Srovnání PR křivek pro různé počty příznaků}
 
-\result{{by_model/relumean_DET}.pdf}{DET křivka modelu relumean pro různá nastavení}
-\result{{by_model/relurelumean_DET}.pdf}{DET křivka modelu relurelumean pro různá nastavení}
-\result{{by_model/relurelumeanrelu_DET}.pdf}{DET křivka modelu relurelumeanrelu pro různá nastavení}
-\result{{by_model/maxout3mean_DET}.pdf}{DET křivka modelu maxout3mean pro různá nastavení}
-\result{{by_model/maxout3maxout3mean_DET}.pdf}{DET křivka modelu maxout3maxout3mean pro různá nastavení}
+\section{Srovnání různých vah na pozitivních taškách}
+Při trénování umělé neuronové sítě lze pozitivním a negativním taškám přiřadit různé váhy, podle kterých se algoritmus bude jinak agresivně snažit odstranit falešně pozitivní a falešně negativní odhady \todo{Víc detailu?}. Byly vyzkoušeny váhy na pozitivních taškách \( 0.5 \), \( 0.1 \) a \( 0.01 \). Všechny váhy byly testovány s topologií relumean, trigramy a vektorem příznaků o velikosti \( 2053 \). Jejich PR křivky jsou srovnané na obrázku \ref{weights}.
+
+\result{{weights_PR}.pdf}{weights}{Srovnání PR křivek pro různé váhy na pozitivních taškách}
