Fixed more biblatex issues

--- a/preamble.tex
+++ b/preamble.tex
@@ -39,7 +39,10 @@
 	linkcolor=red,
 	urlcolor=blue
 }
+
+% BibLaTeX fixes
 \def\UrlBreaks{\do\/\do-}
+\renewbibmacro{labeltitle}{}
 
 \theoremstyle{plain}
 \newtheorem{theorem}{Věta}[chapter]
