--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,6 +1,8 @@
 \chapter*{Závěr}
 \addcontentsline{toc}{chapter}{Závěr}
 
-Co se podařilo (i nepodařilo).
+V této práci byl navržen model pro automatickou detekci síťového provozu pocházejícího z aktivity malware, navrženy metody srovnání tohoto modelu s předchozími pracemi v oboru a provedeno experimentální vyhodnocení na reálných datech. Navržený model má srovnatelnou přesnost s nejlepším předchozím modelem, avšak výrazně vyšší odezvu. Tím byl dosažen a dokonce překonán vytyčený cíl práce, tj. aby navržený model měl alespoň stejnou kvalitu jako předchozí modely, využívající ručně vytvořeného seznamu příznaků. Navržený klasifikátor umožňuje detekci nežádoucího software s přesností i odezvou přesahující 90\%. Bylo tedy ukázáno, že přístup pomocí multi-instančního učení je v praxi využitelnou alternativou ke klasickému přístupu, poskytující velmi dobré výsledky.
 
-Kam dál? (Syntetické gradienty, noisyReLU, flow \& user modely). Jak se potvrdila hypotéza, bylo dosaženo cíle? Adekvátnost metod.
+Součástí hypotézy bylo, že bude možné nalézt nejlepší nastavení parametrů modelu zhodnocením jejich vlivu na kvalitu klasifikátoru. To se ukázalo pouze jako částečně možné, neboť jako nejlepší nastavení parametrů byly shledány výchozí hodnoty. \todo{Možná velikost feature vektoru bude mít ještě vliv.}
+
+Jako možný další postup k vylepšení navrženého modelu se jeví opětovná aplikace mutli-instančního učení na tuto úlohu, jejímž výsledkem by byl klasifikátor, který určuje přítomnost nežádoucího software na úrovni klientů (narozdíl od současného modelu, klasifikujícího na úrovni síťových spojení). Dalším možným krokem je znovupoužití multi-instančního učení na takovýto model, tentokrát na úrovni síťových toků, to jest sekvencí síťových spojení mířících ke stejné destinaci. Výsledný model by byl tvořen čtyřmi vnořenými multi-instančními úlohami. Jako další možné vylepšení navrženého modelu se jeví techniky zrychlující proces učení. Mezi tyto patří například využití přenosových funkcí obsahujících šum (srov. \cite{gulcehre_noisy_2016}), sebe-normalizujících neuronových sítí (srov. \cite{klambauer_self-normalizing_2017}) či využití učení pomocí syntetických gradientů (srov. \cite{jaderberg_decoupled_2016})
