--- a/zotero.bib
+++ b/zotero.bib
@@ -572,3 +572,24 @@
 	date = {2014},
 	langid = {english}
 }
+
+@article{jaderberg_decoupled_2016,
+	title = {Decoupled Neural Interfaces using Synthetic Gradients},
+	url = {https://arxiv.org/abs/1608.05343},
+	journaltitle = {{arXiv} preprint {arXiv}:1608.05343},
+	author = {Jaderberg, Max and Czarnecki, Wojciech Marian and Osindero, Simon and Vinyals, Oriol and Graves, Alex and Kavukcuoglu, Koray},
+	urldate = {2017-07-06},
+	date = {2016},
+	langid = {english},
+	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/B93NQB59/1608.html:text/html}
+}
+
+@article{klambauer_self-normalizing_2017,
+	title = {Self-Normalizing Neural Networks},
+	url = {https://arxiv.org/abs/1706.02515},
+	journaltitle = {{arXiv} preprint {arXiv}:1706.02515},
+	author = {Klambauer, Günter and Unterthiner, Thomas and Mayr, Andreas and Hochreiter, Sepp},
+	urldate = {2017-07-06},
+	date = {2017},
+	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/6HS5G8ZP/1706.html:text/html}
+}
